Add NavController to MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Brew</string>
+    <string name="title_activity_coffee_list">CoffeeListActivity</string>
+    <string name="title_activity_main_layout">MainLayout</string>
 </resources>
